--- a/shippable.yml
+++ b/shippable.yml
@@ -1,12 +1,14 @@
-build_image: kode-konveyor/toolchain
-language: python
-python:
-  - 2.7
+language: node_js
 
 build:
+
   ci:
-    - /usr/local/toolchain/tools/Script
-  on_success:
-    - /usr/local/toolchain/tools/publish
-  on_failure:
-    - /usr/local/toolchain/tools/publish
+    - docker build -t kodekonveyor/toolchain:$BRANCH.$BUILD_NUMBER .
+
+  post_ci:
+    - docker push kodekonveyor/toolchain:$BRANCH.$BUILD_NUMBER
+
+integrations:
+  hub:
+    - integrationName: docker
+type: dockerRegistryLogin
