build tags both including the build number and without it

--- a/shippable.yml
+++ b/shippable.yml
@@ -6,9 +6,11 @@ build:
     - ~/.m2
   ci:
     - docker build -t kodekonveyor/toolchain:$BRANCH.$BUILD_NUMBER .
+    - docker build -t kodekonveyor/toolchain:$BRANCH .
 
   post_ci:
     - docker push kodekonveyor/toolchain:$BRANCH.$BUILD_NUMBER
+    - docker push kodekonveyor/toolchain:$BRANCH
 
 integrations:
   hub:
