--- a/shippable.yml
+++ b/shippable.yml
@@ -5,8 +5,9 @@ build:
   cache_dir_list:
     - ~/.m2
   ci:
-    - docker build -t kodekonveyor/toolchain:$BRANCH.$BUILD_NUMBER .
+    - docker build --no-cache -t kodekonveyor/toolchain:$BRANCH.$BUILD_NUMBER .
     - docker build -t kodekonveyor/toolchain:$BRANCH .
+    - ./test.sh
 
   post_ci:
     - docker push kodekonveyor/toolchain:$BRANCH.$BUILD_NUMBER
