--- a/shippable.yml
+++ b/shippable.yml
@@ -7,10 +7,10 @@ build:
   ci:
     - docker build --no-cache -t kodekonveyor/toolchain:$BUILD_NUMBER .
     - docker tag kodekonveyor/toolchain:$BUILD_NUMBER kodekonveyor/toolchain:$(echo $BRANCH|sed 'sA/A.Ag')
-    - if [ -v GIT_TAG_NAME ]; then echo docker tag kodekonveyor/toolchain:$BUILD_NUMBER kodekonveyor/toolchain:$GIT_TAG_NAME; else echo not building for tag ;fi
+    - if [ -n GIT_TAG_NAME ]; then docker tag kodekonveyor/toolchain:$BUILD_NUMBER kodekonveyor/toolchain:$GIT_TAG_NAME; else echo not building for tag ;fi
 
   post_ci:
-    - docker push kodekonveyor/toolchain:$BUILD_NUMBER .
+    - docker push kodekonveyor/toolchain:$BUILD_NUMBER 
     - docker push kodekonveyor/toolchain:$(echo $BUILD_NUMBER|sed 'sA/A.Ag')
     - if [ -n $GIT_TAG_NAME ] then docker push kodekonveyor/toolchain:$GIT_TAG_NAME; fi
 
