build and push in scripts

--- a/shippable.yml
+++ b/shippable.yml
@@ -5,14 +5,10 @@ build:
   cache_dir_list:
     - ~/.m2
   ci:
-    - docker build --no-cache -t kodekonveyor/toolchain:$BUILD_NUMBER .
-    - docker tag kodekonveyor/toolchain:$BUILD_NUMBER kodekonveyor/toolchain:$(echo $BRANCH|sed 'sA/A.Ag')
-    - if [ "x$GIT_TAG_NAME" != "x" ]; then docker tag kodekonveyor/toolchain:$BUILD_NUMBER kodekonveyor/toolchain:$GIT_TAG_NAME; else echo not building for tag ;fi
+    - tools/buildDocker
 
   post_ci:
-    - docker push kodekonveyor/toolchain:$BUILD_NUMBER 
-    - docker push kodekonveyor/toolchain:$(echo $BUILD_NUMBER|sed 'sA/A.Ag')
-    - if [ -n $GIT_TAG_NAME ] then docker push kodekonveyor/toolchain:$GIT_TAG_NAME; fi
+    - tools/pushDocker
 
 integrations:
   hub:
