Feature/build and test (#14)
* publish works with ssh repo uris

* check POM for requirements of maven central

* make sure that we have a rich model when implementedBehaviours run

* before hooks in java rules, exporting kkpipeline variables

* fixup

* update-metamodel tool

* update-metamodel

* workaround for missing integratons in pull requests

* no negative condition

* fail on constraint errors

* fixup

* version check

* tag build fixed

* fixup

* more meaningful name

* more meaningful name in versions

* more meaningful name for script

* fixup:checkDocErrors script installed

* fixup: path

* fixup: checkdoc script path

* fixup

* build and push in scripts

* fixup

* fixup

* fixup

* no tag build needed as it builds as branch

* build test projects

* fixup

* building tests as nonroot

* ciuser can run docker

* added docker group

* fixup

* fixup

* fixup

* fixup

* debug

* debug

* debug

* debug

* debug

* debug

* debug

* debug

* fixup

* pipeline integration

--- a/shippable.yml
+++ b/shippable.yml
@@ -14,3 +14,6 @@ integrations:
   hub:
     - integrationName: docker
       type: dockerRegistryLogin
+  generic:
+    - integrationName: kkpipeline
+
